# esp-devices

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
devices/win-door-sensor/: Cargo.toml
devices/win-door-sensor/.cargo/: config.toml
devices/win-door-sensor/src/: main.rs
